Update StreamAPI.java